// Copyright 2020 The vineadm Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// This file was autogenerated by goproto-gen. Do not edit it manually!

syntax = 'proto2';

package github.com.lack_io.vine_example.goproto.api;

// Package-wide variables from generator "generated".
option go_package = "api";

// +vine:genproto=true
message Others {
  optional string info1 = 1;
}

// +vine:genproto=true
message TestStruct1 {
  optional string name = 1;

  map<string, string> map = 2;

  optional uint64 age = 3;

  optional double raise = 4;

  optional string address = 5;

  repeated string languages = 6;

  optional Others others = 7;
}

